--- a/rmq-dep.yaml
+++ b/rmq-dep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: vpromq01
-          image: rabbitm1
+          image: rabbitmq
           ports:
             - name: vpromq01-port
               containerPort: 15672
